style/custom.css
/* ... */
/* @end */

/* @end */

/* @group Custom Menu */
.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus,
.dropdown-submenu:hover > a,
.dropdown-submenu:focus > a {
  color: #ffffff;
  text-decoration: none;
  background-color: [[setting:themecolor]];
  background-image: -moz-linear-gradient(top, [[setting:themecolor]], [[setting:themehovercolor]]);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from([[setting:themecolor]]), to([[setting:themehovercolor]]));
  background-image: -webkit-linear-gradient(top, [[setting:themecolor]], [[setting:themehovercolor]]);
  background-image: -o-linear-gradient(top, [[setting:themecolor]], [[setting:themehovercolor]]);
  background-image: linear-gradient(to bottom, [[setting:themecolor]], [[setting:themehovercolor]]);
}

.dropdown [class^="icon-"] {
	font-size: 1.1em;
	margin-right: 5px;
	vertical-align: top;	
}
/* @end */

/* @group Navbar
 */

.breadcrumb {
    padding: 0px;
    color: #555;
    text-transform: uppercase;
    font-size: 12px;
    background: transparent;
    margin: 0px;
}

.breadcrumb-button {
    margin-top: -4px;
}

ul.breadcrumb span.divider {
	display: none;
}

ul.breadcrumb li:after { 
	content: "[[setting:navbarsep]]";
	font-family: FontAwesome;
	font-size: 1.1em;
	margin: 0px 6px 0px 3px;
	color: #bbb;
}

ul.breadcrumb li:last-child:after { 
	content: none; 
}

.navbar {
    margin-bottom: 0px;
    background-image: none !important;
}

.navbar-inner{
    border-top:1px solid [[setting:themehovercolor]] !important;
    border-bottom:1px solid [[setting:themehovercolor]] !important;
    border-radius: 0px;
    line-height: 0px;
    background-color: [[setting:themecolor]] !important;
    background-image: none;
    filter: none;
}

.navbar .brand {
    color: #fff;
    text-shadow: none;
    line-height: 20px;
}

.navbar .nav{
    border-right:1px solid [[setting:themehovercolor]];
}

.navbar .nav > li > a{
    border-left:1px solid [[setting:themehovercolor]];
}

.navbar .nav > li > a:hover{
    background:[[setting:themehovercolor]] !important;
}

.navbar .nav .active > a,
.navbar .nav .active > a:hover,
.navbar .nav .active > a:focus,
.navbar .nav li.dropdown.open > .dropdown-toggle,
.navbar .nav li.dropdown.active > .dropdown-toggle,
.navbar .nav li.dropdown.open.active > .dropdown-toggle {
    background: [[setting:themecolor]] !important;
    color: #fff;
}

.navbar .caret {
    border-top-color: white !important;
    border-bottom-color: white !important;
    margin-left: 5px;
}

.navbar .nav > li > a {
    color: #fff;
    text-shadow: none;
    border-left: 1px solid [[setting:themehovercolor]];
}

.navbar .nav > li > a:hover {
    color: #fff;
}

/* @end */

/* @group Course
 */

.course-content ul li.section.main {
    border-bottom: 0px none;
    background: url([[pix:theme|bg/dot]]) bottom repeat-x;
}

.course-content ul.topics li.section.main.clearfix.current {
	box-shadow:0px 0px 10px [[setting:themecolor]];
	border-radius: 5px;
}

h2.pagetitle {
    padding: 0px;
    margin: 0px;
    font-size: 20px;
    line-height: 35px;
    color: #777;
    background: url([[pix:theme|bg/dot]]) left center repeat-x;
    background-size: 4px 20px;
}

h2.pagetitle span {
    background: white url([[setting:pagebackground]]) repeat;
    padding-right: 8px;
}

.firstword {
    color: [[setting:themecolor]] !important;
    margin-right: -5px;
}

.left.side {
    display: none;
}

.editing .left.side {
    display: inline;
}



/* @end */

/* @group Layout */

.side-pre {
    border: 1px solid #333;
}

.container-fluid {
    max-width: 1200px;
}

#region-main {
    padding-right: 10px;
}

.span12#move {
    margin-top: -30px;
}

/* Negate core style when using 'interesting' layout so that browser renders drop target
   correctly. */
.empty-region-side-pre #block-region-side-pre, .empty-region-side-post #block-region-side-post {
    display: block;
}

/* @end */

/* @group Forums */

.forumheaderlist .picture img {
    border-radius:250px;
    margin-right: 10px;
}

.forumpost,
.forumheaderlist {
    background: #fff;
    border-radius: 10px;
    border: 1px solid #E1E1E1 !important;
    padding: 10px;
}

.forumheaderlist td {
    padding: 5px;
}

.forumpost .picture img {
    border-radius:250px;
    box-shadow:0px 0px 3px [[setting:themecolor]];
    margin-right: 10px;
}

.forumpost .content .posting {
    border-top: 1px bg/dotted #ccc;
    padding-top: 10px;
}

.forumpost .subject {
    font-weight: normal;
    font-family: "Oswald", sans-serif;
    color: [[setting:themecolor]];
    font-size: 1.2em;
    margin-bottom: -5px;

}

.forumsearch input[type="text"] {
    font-size: 12px !important;
    height: 15px;
    width: 180px;
    margin-right: 10px;
}

.forumsearch input[type="submit"] {
    font-size: 12px !important;
    line-height: 15px;
}

/* @end */

/* @group Buttons */

.button {
    margin: 10px 0px;
}

.button a, .button a:visited {
    background: [[setting:themecolor]];
    border-bottom: 2px solid #29A1C4;
    width: 100px;
    padding: 6px 15px;
    border-radius: 5px;
}

a#button,
a#button-green,
a#button-red,
a#button-purple,
a#button-orange,
a#button-black,
a#button-grey {
    margin:10px 0px;
}

a#button,
a#button:visited,
a#button-green,
a#button-green:visited,
a#button-red,
a#button-red:visited,
a#button-orange,
a#button-orange:visited,
a#button-purple,
a#button-purple:visited,
a#button-black,
a#button-black:visited,
a#button-grey,
a#button-grey:visited {
    color:#fff;
    width:100px;
    padding:6px 15px;
    font-size:14px;
    border-radius:5px;
}

a#button:hover,
a#button-red:hover,
a#button-green:hover,
a#button-purple:hover,
a#button-orange:hover,
a#button-black:hover,
a#button-grey:hover{
    color:#fff;
    text-decoration:none;
}

a#button-red,
a#button-red:visited {
    background:#ff3300;
}

a#button-red:hover {
    background:#cc3300;
}

a#button-green,
a#button-green:visited {
    background:#33cc00;
}

a#button-green:hover {
    background:#009933;
}
/* ... */

